MFC r339587: Added support for formula-based arbitrary baud rates, in contrast to the current fixed values, which enables use of rates above 1 Mbps. Improved the detection of HXD chips, and the status flag handling as well.

Submitted by:		Gabor Simon <gabor.simon75@gmail.com>
PR:			225932
Approved by:		re (kib)
Differential revision:	https://reviews.freebsd.org/D16639
Sponsored by:		Mellanox Technologies